--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -3,12 +3,10 @@ on : [push]
 jobs :
   run :
     runs-on : ubuntu-latest
-    permissions :
-      contents : write
-      pull-requests : write
-    container : docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps :
       - uses : actions/checkout@v3
+      - uses : actions/setup-python@v4
+      - uses : iterative/setup-cml@v1
       - name : Train model 
         env :
           repo_token : ${{ secrets.GITHUB_TOKEN }}
@@ -21,4 +19,3 @@ jobs :
           echo "![](./plot.png)" >> report.md
           cml comment create report.md
 
-          
